# tauri-mantine-template

./: .eslintignore  .eslintrc.cjs  .prettierignore  .stylelintrc.js  commitlint.config.js  etc-fe-lint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  updater.rs
src-tauri/src/commands/: fetcher.rs  mod.rs  store.rs
src-tauri/src/menu/: sys_tray.rs  tray_event.rs
src-tauri/src/plugin/: init_plugins.rs  mod.rs  plugins.rs
src-tauri/src/structs/: mod.rs  singer.rs  tray_structs.rs
src-tauri/src/tray/: mod.rs  tray_event.rs
src/Guard/: useAsideGuard.ts
src/Layout/: Splashscreen.tsx
src/Layout/MainLayout/: index.tsx  main-layout.module.css  main-layout.type.ts
src/Provider/: Provider.tsx
src/components/Fallback/: index.tsx
src/components/NavLinks/: index.tsx  nav-links.module.css
src/constant/: index.ts  route-no-aside-list.ts
src/hooks/: useCookies.ts  useLocalForage.ts  useStorage.ts  useTauriStore.ts
src/router/: index.tsx
src/router/hooks/: useParams.ts  usePathname.ts  useSearchParams.ts
src/views/About/: index.tsx
src/views/Home/: index.tsx
src/views/Settings/: index.tsx
